# CareerV2

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.claude/: launch.json
.github/workflows/: ci.yml
ADR/: 0001-domain-foundation.md  0002-knowledge-generation-platform.md
docs/: PRODUCT_STRATEGY_REVIEW.md
docs/bible/: 00-INDEX.md  01-vision-and-constitution.md  02-system-walkthrough.md  03-domain-model.md  04-engine-layer.md  05-knowledge-platform.md  06-application-api-frontend.md  07-operations.md  08-design-review.md  09-research-and-roadmap.md
src/detective_monkey/: __init__.py
src/detective_monkey.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/detective_monkey/application/: __init__.py  container.py  discovery_service.py  dto.py  evidence_service.py  intelligence_dto.py  intelligence_service.py  ports.py  seed.py  services.py
src/detective_monkey/contracts/: __init__.py  context.py  engine.py  registry.py
src/detective_monkey/domain/: __init__.py
tests/: test_api_journey.py  test_backend_pipeline.py  test_career_knowledge.py  test_discovery.py  test_engine_contracts.py  test_engine_pipeline.py  test_infrastructure.py  test_intelligence.py  test_invariants.py  test_knowledge_platform.py  test_llm_provider.py  test_mentor.py  test_recommendation_contract.py  test_rest_api.py  test_retrieval_agent.py  test_student_evidence.py  test_value_objects.py
tools/: generate_career_knowledge.py
tools/career_catalog/: __init__.py  part1.py  part2.py  part3.py
(+449 files in other folders)
